# goated

./: .gitignore  README.md  pyproject.toml
examples/: run_gocca.ipynb  run_goccha.ipynb  run_gotcha.ipynb
goated/: abstract.py  abstractobj.py  cp.py  tucker.py
goated/goals/: abstract.py  physics.py
goated/recipes/: goals.py
goated/rol_interface/: CPVector.py  FactorVector.py  TuckerVector.py  models.py  objective.py  objectives.py  vectors.py
goated/tests/: test_exo.py  test_goated_pipeline_synthetic.py  test_goccha_pipeline.py  test_gotcha_pipeline.py  test_linops.py  test_pipelines_on_matrices.py
goated/utils/: exo.py  linops.py  scalers.py  tprod_linops.py  vectorization.py
