[build-system]
requires = [
    "setuptools"
]

[project]
name = "goated"
version = "0.1.0"
description = "A Python package for goal-oriented CP and Tucker tensor decomposition"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "pyttb",
    "pyrol",
    "dask"
]
requires-python = ">=3.10"

[project.optional-dependencies]
genten = ["pygenten"]
