[build-system]
requires = [
    "setuptools"
]

[project]
name = "goated"
version = "0.1.0"
description = "A Python package for goal-oriented CP and Tucker tensor decomposition"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "pyttb",
    "rol-python"
]
requires-python = ">=3.11"

[project.optional-dependencies]
exo = ["netCDF4"]
genten = ["pygenten"]
dask = ["dask"]
